--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "17.0.2",
     "react-parallax": "^3.3.0",
+    "react-responsive": "^9.0.0-beta.5",
     "sass": "^1.35.1",
     "slick-carousel": "^1.8.1"
   },
