--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/core": "^10.1.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@mui/material": "^5.2.5",
     "bootstrap": "^5.0.0-beta3",
     "gsap": "^3.7.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "17.0.2",
+    "react-google-recaptcha-v3": "^1.9.7",
     "react-parallax": "^3.3.0",
     "react-responsive": "^9.0.0-beta.5",
     "sass": "^1.35.1",
