--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.6",
     "@emotion/core": "^10.1.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -18,6 +19,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@mui/material": "^5.2.5",
     "bootstrap": "^5.0.0-beta3",
+    "graphql": "^16.2.0",
     "gsap": "^3.7.0",
     "next": "11.0.1",
     "react": "17.0.2",
