--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@mui/material": "^5.2.5",
+    "axios": "^0.24.0",
     "bootstrap": "^5.0.0-beta3",
     "graphql": "^16.2.0",
     "gsap": "^3.7.0",
