--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "17.0.2",
     "react-google-recaptcha-v3": "^1.9.7",
     "react-parallax": "^3.3.0",
+    "react-render-html": "^0.6.0",
     "react-responsive": "^9.0.0-beta.5",
     "sass": "^1.35.1",
     "slick-carousel": "^1.8.1"
