--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "bootstrap": "^5.0.0-beta3",
     "graphql": "^16.2.0",
     "gsap": "^3.7.0",
-    "next": "11.0.1",
-    "react": "17.0.2",
+    "next": "^12.1.0",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-google-recaptcha-v3": "^1.9.7",
     "react-parallax": "^3.3.0",
     "react-render-html": "^0.6.0",
